<resources>
    <string name="app_name">买卖通</string>
    <string name="empty_results">暂无数据</string>
    <string name="error_msg">出错了</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="please_input_password_again">请再确认密码</string>
    <string name="confirm">确定</string>
    <string name="action_quote">报价管理</string>
    <string name="action_logistics">物流管理</string>
    <string name="action_car">车辆管理</string>
    <string name="action_user">个人中心</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="forgot_password_2">忘记密码</string>
    <string name="modify_password">修改密码</string>
    <string name="different_pwd">两次输入的密码不一样</string>
    <string name="product_name">商品名称：</string>
    <string name="product_name_2">商品名称</string>
    <string name="quote_it">参与报价</string>
    <string name="not_quote_it">不报价</string>
    <string name="delete">删除</string>
    <string name="starting_place">起始地</string>
    <string name="destination">目的地</string>
    <string name="distance">运输产考距离</string>
    <string name="starting_place_2">起始地:</string>
    <string name="destination_2">目的地:</string>
    <string name="distance_2">距离:</string>
    <string name="quote_time">报价时间</string>
    <string name="car_no">车牌号</string>
    <string name="car_owner">车主</string>
    <string name="driver">驾驶员</string>
    <string name="driver_2">驾驶员（选择）</string>
    <string name="contact_phone">联系电话</string>
    <string name="available_goods">可装载货物</string>
    <string name="available_weight">载重量</string>
    <string name="car_status">认证状态</string>
    <string name="name">姓名</string>
    <string name="bind_car_no">绑定车牌号</string>
    <string name="recharge">充值</string>
    <string name="user_balance">账户总额（元）</string>
    <string name="account_type">账户类型</string>
    <string name="personal_account">个人账户</string>
    <string name="business_account">企业账户</string>
    <string name="bond_balance">保证金余额（元）</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="withdraw">提现</string>
    <string name="commission_info">佣金信息</string>
    <string name="commission">佣金</string>
    <string name="invoice_manage">发票管理</string>
    <string name="feedback">意见反馈</string>
    <string name="detail">详情</string>
    <string name="view_cars">查看分车</string>
    <string name="freight">运费</string>
    <string name="spec">型号规格</string>
    <string name="in_completed">未完成</string>
    <string name="order_no">订单号</string>
    <string name="balance">账户余额</string>
    <string name="currency">元</string>
    <string name="recharge_amount">充值金额</string>
    <string name="currency_sign">￥</string>
    <string name="confirm_to_recharge">确定充值</string>
    <string name="withdrawal_bank_card">到账银行卡</string>
    <string name="please_choose_bank_card">请选择银行卡</string>
    <string name="arrival_time">当天24小时到账</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="withdrawal_all">全部提现</string>
    <string name="submit">提交</string>
    <string name="bank_card_owner_name">持卡人</string>
    <string name="card_no">卡号</string>
    <string name="please_input_card_no">请输入卡号</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="cancel">取消</string>
    <string name="sure_to_delete">是否确定删除？</string>
    <string name="bank_card">银行卡</string>
    <string name="withdraw_records">提现记录</string>
    <string name="in_out_records">收支记录</string>
    <string name="recharge_records">充值记录</string>
    <string name="bond_recharge_records">保证金充值记录</string>
    <string name="bond_recharge">保证金充值</string>
    <string name="feedback_success">意见提交成功</string>
    <string name="recharge_success">充值成功</string>
    <string name="current_balance">当前账户余额%1$s元，</string>
    <string name="sure_to_quote_not">是否确认不报价</string>
    <string name="loading_info">装货信息</string>
    <string name="unloading">下货信息</string>
    <string name="quote_info">报价信息</string>
    <string name="able_tran_num">可运趟数</string>
    <string name="t_price">带票单价</string>
    <string name="ut_price">不带票单价</string>
    <string name="fill_in_quote_form">填写报价</string>
    <string name="car">车辆</string>
    <string name="trans_num">趟数</string>
    <string name="input_trans_num">填写趟数</string>
    <string name="price">单价（元）</string>
    <string name="load_time">最早装货时间</string>
    <string name="unload_time">最早下货时间</string>
    <string name="time_consuming">大约需要时间</string>
    <string name="predicate_load_time">预计装货时间</string>
    <string name="predicate_unload_time">预计下货时间</string>
    <string name="input_date">填写日期</string>
    <string name="input_time">填写时间</string>
    <string name="carrying_capacity">核定载重（吨）</string>
    <string name="input_carrying_capacity">填写吨数</string>
    <string name="please_input_all">请填写完全部数据</string>
    <string name="submit_quote">提交报价</string>
    <string name="tax_rate">税率%</string>
    <string name="input_tax_rate">填写税率%</string>
    <string name="tv_think_twice">再看看</string>
    <string name="confirm_quote">确定报价</string>
    <string name="please_fill_tax_rate">请填写税率</string>
    <string name="map_view">MapView</string>
    <string name="order_detail">订单详情</string>
    <string name="product_info">产品信息</string>
    <string name="quantity">数量</string>
    <string name="total_freight">总运费</string>
    <string name="order_create_date">订单生成日期</string>
    <string name="car_order">分车运单</string>
    <string name="modify">修改</string>
    <string name="set_out">出发</string>
    <string name="message">消息</string>
    <string name="you_have_an_new_message">你有一条新消息</string>
    <string name="view_message">查看消息</string>
    <string name="time_colon">时间:</string>
    <string name="weight_1_colon">总量:</string>
    <string name="weight_2_colon">皮重:</string>
    <string name="before_load_pound">装货前过磅单</string>
    <string name="after_load_pound">装货后过磅单</string>
    <string name="upload_load_pound">上传装货过磅单</string>
    <string name="upload_unload_pound">上传卸货过磅单</string>
    <string name="add_driver">添加驾驶员</string>
    <string name="add">添加</string>
    <string name="pick_driver">选择驾驶员</string>
    <string name="add_car">车辆认证</string>
    <string name="base_info">基本信息</string>
    <string name="escort_option">押运(选填)</string>
    <string name="car_images">车辆图片</string>
    <string name="please_pick_driver">请选择驾驶员</string>
    <string name="please_pick_available_goods">请选择可装置货物类型</string>
    <string name="please_pick_car_type">请选择车型</string>
    <string name="please_pick_car_box_type">请选择厢式</string>
    <string name="car_cer">车辆证件</string>
    <string name="prompt">提示</string>
    <string name="please_select">请选择</string>
    <string name="modify_driver">修改驾驶员</string>
    <string name="modify_arrival_time">修改到达时间</string>
    <string name="launch_loading">发起装货</string>
    <string name="launch_unloading">发起卸货</string>
    <string name="upload_pound">上传过磅单</string>
    <string name="solid">固体</string>
    <string name="liquid">液体</string>
    <string name="gas">气体</string>
    <string name="normal_goods">普通货物</string>
    <string name="fresh_goods">生鲜类货物</string>
    <string name="chemistry_goods">危化品类货物</string>
    <string name="clear_cache">清除缓存</string>
    <string name="sign_out">登录账号（退出账号）</string>
    <string name="settings">设置</string>
    <string name="cache_cleared">缓存已清除</string>
    <string name="weight_holder">吨</string>
    <string name="product_type">产品类别及品种</string>
    <string name="sure_to_set_out">确认出发？</string>
    <string name="other">其他</string>
    <string name="sure_to_launch">确认发起装货？</string>
</resources>
