<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/nav_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_recharge_card_top_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:text="@string/balance"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold"
            tools:text="1000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/currency"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorTextBlack"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_recharge_card_bottom_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="48dp"
            android:text="@string/recharge_amount"
            android:textColor="@color/colorTextBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="48dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_sign"
                android:textColor="@color/colorTextBlack"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/et_recharge_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textSize="40sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="?android:listDivider" />

        <Button
            android:id="@+id/btn_confirm_to_recharge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_green_btn_bg"
            android:text="@string/confirm_to_recharge"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>